Mon Nov 27 21:03:53 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_typecode/struct_typecode.cpp:

          - Cosmetic changes to source code, mostly addition of
            braces around single-line IF bodies.

          - Cosmetic changes to generated code, to keep line
            lengths less than 80 characters.

        * TAO_IDLbe/be_visitor_typecode/typecode_defn.cpp:

          Changed check to tell if interface or valuetype members
          are defined, and thus if they need a forward declared
          typecode generated. This need for this change is a
          consequence of recent changes in the way forward
          declared interfaces and valuetypes are handled.

        * TAO_IDLast/ast_interface_fwd.cpp:

          Removed an unnecessary line of source code.

Mon Nov 27 17:34:21 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/utl_err.h:
        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/fe/idl.ll:
        * TAO_IDL/util/utl_err.cpp:

          Added error check in #pragma version parsing, and a new
          error message to output if an error is found with this
          check. Since the only related error that was checked
          for and reported before was an invalid version number,
          an additional case was needed for a more general syntax
          error. Thanks to Johnny Willemsen <jwillemsen@remedy.nl>
          for supplying the example IDL that caused a crash due
          to the lack of this error checking. This fix closes
          [BUGID:2728].

Mon Nov 27 14:46:18 UTC 2006  Vadym Ridosh <vridosh@prismtech.com>

        * tests/Bug_2709_Regression/Bug_2709_Regression.mpc
        * tests/Bug_2709_Regression/client.cpp
        * tests/Bug_2709_Regression/Client_Task.cpp
        * tests/Bug_2709_Regression/Client_Task.h
        * tests/Bug_2709_Regression/README
        * tests/Bug_2709_Regression/run_test.pl
        * tests/Bug_2709_Regression/server.cpp